--- a/src/components/Details.module.css
+++ b/src/components/Details.module.css
@@ -1,7 +1,7 @@
 .inner {
   display: flex;
   justify-content: space-between;
-  padding-top: calc(var(--mantine-spacing-xl) * 4);
+  padding-top: calc(var(--mantine-spacing-xl) * 3);
   padding-bottom: calc(var(--mantine-spacing-xl) * 4);
 }
 
@@ -13,6 +13,7 @@
     max-width: 100%;
     margin-right: 0;
   }
+  margin-top: 0;
 }
 
 .title {
