--- a/src/components/Footer.module.css
+++ b/src/components/Footer.module.css
@@ -22,3 +22,15 @@
     margin-top: var(--mantine-spacing-md);
   }
 }
+
+.title {
+  color: light-dark(var(--mantine-color-black), var(--mantine-color-white));
+  font-family: Greycliff CF, var(--mantine-font-family);
+  font-size: 44px;
+  line-height: 1.2;
+  font-weight: 800;
+
+  @media (max-width: $mantine-breakpoint-xs) {
+    font-size: 28px;
+  }
+}
