--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -8,7 +8,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  z-index: 1000; /* Keeps the header on top of other elements */
+  z-index: 100; /* Keeps the header on top of other elements */
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Optional: Adds a subtle shadow */
 }
 
@@ -44,7 +44,7 @@
 
 .title {
   color: light-dark(var(--mantine-color-black), var(--mantine-color-white));
-  font-family: Greycliff CF, var(--mantine-font-family);
+  font-family: var(--mantine-font-family);
   font-size: 44px;
   line-height: 1.2;
   font-weight: 800;
